--- a/pages/style.css
+++ b/pages/style.css
@@ -3,8 +3,37 @@
 }
 
 .test-page-notification {
-  margin-top: 20px;
-  border-radius: 4px;
-  padding: 12px;
+  margin-top: 40px;
+  border-radius: 8px;
+  padding: 20px;
   background-color: lightgrey;
+  text-align: center;
+}
+
+.test-page-title {
+  font-size: 20px;
+  color: #555;
+}
+
+.env-title {
+  padding-bottom: 5px;
+  color: grey;
+}
+
+.env {
+  display: inline-block;
+  border-radius: 100%;
+  padding: 10px;
+  color: white;
+  font-size: 22px;
+  font-weight: bold;
+}
+.env.green {
+  background-color: green;
+}
+.env.red {
+  background-color: red;
+}
+.env.orange {
+  background-color: orange;
 }
